# dynapydantic

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  pre-commit.yml
dev/: 404.html  index.html  objects.inv
dev/reference/: index.html
dev/search/: search_index.json
src/dynapydantic/: __init__.py  base.py  cli.py  exceptions.py  hookspecs.py  polymorphic.py  registry.py  subclass_tracking_model.py  tracking_group.py  union_mode.py
tests/: test_plugins.py  test_polymorphic.py  test_recursive_models.py  test_subclass_tracking_model.py  test_tracking_group.py
tests/example/animal-plugins/: pyproject.toml
tests/example/animal-plugins/animal_plugins/: __init__.py
tests/example/base-package/: pyproject.toml
tests/example/base-package/base_package/: __init__.py  animal.py  cat.py  circle.py  cli.py  shape.py
tests/example/dog-plugin/: pyproject.toml
tests/example/dog-plugin/dog_plugin/: __init__.py
tests/example/my-animal/: pyproject.toml
tests/example/my-animal/my_animal/: __init__.py  animal.py  cli.py
tests/example/shape-plugins/: pyproject.toml
tests/example/shape-plugins/shape_plugins/: __init__.py  plugin_classes.py  registration.py
v0.1.1/: index.html
v0.2.0/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: 404.html
