[project]
name = "dynapydantic"
version = "0.1.0"
description = "Dyanmic pydantic models"
readme = "README.md"
authors = [
    { name = "Philip Salvaggio", email = "salvaggio.philip@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "pip>=25.1.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
